; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/mkdosfs/extr_mkdosfs.c_get_list_blocks.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/mkdosfs/extr_mkdosfs.c_get_list_blocks.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c"r\00", align 1
@.str.1 = private unnamed_addr constant [30 x i8] c"Can't open file of bad blocks\00", align 1
@.str.2 = private unnamed_addr constant [5 x i8] c"%ld\0A\00", align 1
@SECTORS_PER_BLOCK = common dso_local global i32 0, align 4
@badblocks = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [16 x i8] c"%d bad block%s\0A\00", align 1
@.str.4 = private unnamed_addr constant [2 x i8] c"s\00", align 1
@.str.5 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @get_list_blocks to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @get_list_blocks(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  store i8* %0, i8** %2, align 8
  %6 = load i8*, i8** %2, align 8
  %7 = call i32* @fopen(i8* %6, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  store i32* %7, i32** %4, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = icmp eq i32* %8, null
  br i1 %9, label %10, label %12

10:                                               ; preds = %1
  %11 = call i32 @die(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.1, i64 0, i64 0))
  br label %12

12:                                               ; preds = %10, %1
  br label %13

13:                                               ; preds = %37, %12
  %14 = load i32*, i32** %4, align 8
  %15 = call i32 @feof(i32* %14)
  %16 = icmp ne i32 %15, 0
  %17 = xor i1 %16, true
  br i1 %17, label %18, label %40

18:                                               ; preds = %13
  %19 = load i32*, i32** %4, align 8
  %20 = call i32 @fscanf(i32* %19, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0), i64* %5)
  store i32 0, i32* %3, align 4
  br label %21

21:                                               ; preds = %34, %18
  %22 = load i32, i32* %3, align 4
  %23 = load i32, i32* @SECTORS_PER_BLOCK, align 4
  %24 = icmp slt i32 %22, %23
  br i1 %24, label %25, label %37

25:                                               ; preds = %21
  %26 = load i64, i64* %5, align 8
  %27 = load i32, i32* @SECTORS_PER_BLOCK, align 4
  %28 = sext i32 %27 to i64
  %29 = mul i64 %26, %28
  %30 = load i32, i32* %3, align 4
  %31 = sext i32 %30 to i64
  %32 = add i64 %29, %31
  %33 = call i32 @mark_sector_bad(i64 %32)
  br label %34

34:                                               ; preds = %25
  %35 = load i32, i32* %3, align 4
  %36 = add nsw i32 %35, 1
  store i32 %36, i32* %3, align 4
  br label %21

37:                                               ; preds = %21
  %38 = load i32, i32* @badblocks, align 4
  %39 = add nsw i32 %38, 1
  store i32 %39, i32* @badblocks, align 4
  br label %13

40:                                               ; preds = %13
  %41 = load i32*, i32** %4, align 8
  %42 = call i32 @fclose(i32* %41)
  %43 = load i32, i32* @badblocks, align 4
  %44 = icmp ne i32 %43, 0
  br i1 %44, label %45, label %52

45:                                               ; preds = %40
  %46 = load i32, i32* @badblocks, align 4
  %47 = load i32, i32* @badblocks, align 4
  %48 = icmp sgt i32 %47, 1
  %49 = zext i1 %48 to i64
  %50 = select i1 %48, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.4, i64 0, i64 0), i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.5, i64 0, i64 0)
  %51 = call i32 @printf(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.3, i64 0, i64 0), i32 %46, i8* %50)
  br label %52

52:                                               ; preds = %45, %40
  ret void
}

declare dso_local i32* @fopen(i8*, i8*) #1

declare dso_local i32 @die(i8*) #1

declare dso_local i32 @feof(i32*) #1

declare dso_local i32 @fscanf(i32*, i8*, i64*) #1

declare dso_local i32 @mark_sector_bad(i64) #1

declare dso_local i32 @fclose(i32*) #1

declare dso_local i32 @printf(i8*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
